nginx/nginx-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flinks
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-flinks
  namespace: flinks
spec:
  selector:
    app: temp-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  namespace: flinks
spec:
  replicas: 3
  selector:
    matchLabels:
      app: temp-nginx
  template:
    metadata:
      labels:
        app: temp-nginx
    spec:
      containers:
      - name: nginx
        image: dubareddy/nginx-task:1.19.0
        ports:
        - containerPort: 80
